feat: wardrobe features